--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             display: block;
             background: transparent;
             pointer-events: auto;
-            outline: 2px dashed red;
+            /* outline: 2px dashed red; */
         }
 
         .carousel {
