--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
         ======================= */
         .slide6-ui {
             position: absolute;
-            top: 62.5%;
+            /* top: 62.5%; */
+            bottom: 170px;
             left: 50%;
             transform: translateX(-50%);
             width: 72%;
@@ -195,7 +196,7 @@
         }
 
         /* ✅ CAMBIO: efecto tipo audio-btn */
-        .slide6-ui .confirm-btn {
+        .carousel__slide .slide6-ui .confirm-btn {
             width: 50%;
             text-decoration: none;
             background: rgba(173, 201, 190, 0.92);
