--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
             <article class="carousel__slide">
                 <video src="media/1.mp4" autoplay muted loop playsinline></video>
-                <button class="audio-btn" id="audioBtn" aria-label="Reproducir música">
+                <button class="audio-btn show" id="audioBtn" aria-label="Reproducir música">
                     <i class="fa-solid fa-play"></i>
                 </button>
             </article>
@@ -284,11 +284,11 @@
                 <video src="media/6.mp4" autoplay muted loop playsinline></video>
 
                 <div class="slide6-ui">
-                    <a class="confirm-btn" href="https://wa.me/qr/IPDZIAGYDCROE1" target="_blank">
+                    <a class="confirm-btn show" href="https://wa.me/qr/IPDZIAGYDCROE1" target="_blank">
                         Confirma a la novia
                     </a>
 
-                    <a class="confirm-btn" href="https://wa.me/qr/MTJBGNQEBAHRO1" target="_blank">
+                    <a class="confirm-btn show" href="https://wa.me/qr/MTJBGNQEBAHRO1" target="_blank">
                         Confirma al novio
                     </a>
                 </div>
