fix whatsappo botn

--- a/index.html
+++ b/index.html
@@ -235,9 +235,13 @@
             <article class="carousel__slide">
                 <video src="media/6.mp4" autoplay muted loop playsinline></video>
                 <div class="slide6-ui">
-                    <a class="confirm-btn show" href="https://wa.me/qr/IPDZIAGYDCROE1" target="_blank">Confirma a la
-                        novia</a>
-                    <a class="confirm-btn show" href="https://wa.me/qr/MTJBGNQEBAHRO1" target="_blank">Confirma al
+                    <a class="confirm-btn show"
+                        href="https://wa.me/50374250704?text=Hola%20Confirmo%20mi%20asistencia"
+                        onclick="tryOpenWhatsApp(event, '50374250704', 'Hola Confirmo mi asistencia')">
+                        Confirma a la novia
+                    </a>
+                    <a class="confirm-btn show" href="https://wa.me/50374250704?text=Hola%20Confirmo%20mi%20asistencia"
+                        onclick="tryOpenWhatsApp(event, '50374250704', 'Hola Confirmo mi asistencia')">Confirma al
                         novio</a>
                 </div>
             </article>
