--- a/index.html
+++ b/index.html
@@ -235,10 +235,15 @@
             <article class="carousel__slide">
                 <video src="media/6.mp4" autoplay muted loop playsinline></video>
                 <div class="slide6-ui">
-                    <a class="confirm-btn show" href="https://wa.me/qr/IPDZIAGYDCROE1" target="_blank">Confirma a la
-                        novia</a>
-                    <a class="confirm-btn show" href="https://wa.me/qr/MTJBGNQEBAHRO1" target="_blank">Confirma al
-                        novio</a>
+                    <a class="confirm-btn show"
+                        href="https://wa.me/50374250704?text=Hola%20%F0%9F%92%8D%E2%9C%A8%20Con%20mucha%20felicidad%20confirmo%20mi%20asistencia%20a%20su%20boda.%20%C2%A1Nos%20vemos%20pronto!">
+                        Confirma a la novia
+                    </a>
+
+                    <a class="confirm-btn show"
+                        href="https://wa.me/50374268759?text=Hola%20%F0%9F%92%8D%E2%9C%A8%20Con%20mucha%20felicidad%20confirmo%20mi%20asistencia%20a%20su%20boda.%20%C2%A1Nos%20vemos%20pronto!">
+                        Confirma al novio
+                    </a>
                 </div>
             </article>
 
